[package]
name = "easy_adblock_for_mosdns"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
log = "0.4.22"
reqwest = { version = "0.11.22", features = [
    "socks",
    "brotli",
    "gzip",
    "deflate",
] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.fast]
inherits = "release"
opt-level = 3
debug = false
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[profile.small]
inherits = "release"
opt-level = 'z'
debug = false
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
